unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/iCLightning__iContact_Clicked_Link__c.object-meta.xml
<CustomObject>
    <description>Holds a record of which links from a sent message have been clicked upon, and how often.</description>
    <label>iContact Clicked Link - Lightning</label>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Clicked Links - Lightning</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>