unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__Campaign__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the campaign.</description>
    <inlineHelpText>A lookup to the campaign.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <type>Lookup</type>
</CustomField>