unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__Click_Time__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Click_Time__c</fullName>
    <description>The date/time of the message click.</description>
    <inlineHelpText>The date/time of the message click.</inlineHelpText>
    <label>Last Click Time</label>
    <type>DateTime</type>
</CustomField>