unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__ClickedLink_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__ClickedLink_ID__c</fullName>
    <description>External ID for iContact clicked link data. Composed of messageid_recipientid_linkhash.</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID for iContact clicked link data. Composed of messageid_recipientid_linkhash.</inlineHelpText>
    <label>ClickedLink_ID</label>
    <length>72</length>
    <type>Text</type>
</CustomField>