unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__Clicks__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Clicks__c</fullName>
    <label>Clicks - Lightning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>