unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__Contact__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this link's statistic was associated to a Contact record, this field points to that Contact.</description>
    <inlineHelpText>If this link's statistic was associated to a Contact record, this field points to that Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <type>Lookup</type>
</CustomField>