unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__Full_Link__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Full_Link__c</fullName>
    <description>The full length link that was clicked from an iContact Sent Message.</description>
    <label>Full Link</label>
    <type>Url</type>
</CustomField>