unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__iContact_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Contact_Id__c</fullName>
    <label>iContact Contact Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>