unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__iContact_Message_Statistic__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Message_Statistic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this record is tracking an individual's link clicks, this will point to their statistics record.</description>
    <inlineHelpText>If this record is tracking an individual's link clicks, this will point to their statistics record.</inlineHelpText>
    <label>iContact Message Statistic</label>
    <referenceTo>iCLightning__iContact_Message_Statistic__c</referenceTo>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <type>Lookup</type>
</CustomField>