unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__iContact_Sent_Message__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Sent_Message__c</fullName>
    <description>The message this link was contained within.</description>
    <inlineHelpText>The message this link was contained within.</inlineHelpText>
    <label>iContact Sent Message</label>
    <referenceTo>iCLightning__iContact_Sent_Message__c</referenceTo>
    <relationshipLabel>iContact Clicked Links - Lightning</relationshipLabel>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>