unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__IdString__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__IdString__c</fullName>
    <description>Hidden field used for bulk sorting of records for pagination.</description>
    <formula>Id&amp;if(mid(Id,10,1)=upper(mid(Id,10,1)), "1", "0")&amp;if(mid(Id,11,1)=upper(mid(Id,11,1)), "1", "0")&amp;if(mid(Id,12,1)=upper(mid(Id,12,1)), "1", "0")&amp;if(mid(Id,13,1)=upper(mid(Id,13,1)), "1", "0")&amp;if(mid(Id,14,1)=upper(mid(Id,14,1)), "1", "0")&amp;if(mid(Id,15,1)=upper(mid(Id,15,1)), "1", "0")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hidden field used for bulk sorting of records for pagination.</inlineHelpText>
    <label>IdString</label>
    <type>Text</type>
</CustomField>