unpackaged/main/default/objects/iCLightning__iContact_Clicked_Link__c/fields/iCLightning__Lead__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this link's statistic was associated to a Lead record, this field points to that Lead.</description>
    <inlineHelpText>If this link's statistic was associated to a Lead record, this field points to that Lead.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <type>Lookup</type>
</CustomField>